--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,72 @@
     transform: rotate(360deg);
   }
 }
+
+.firstText{
+  background-color:#ffffff;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin: 63px;
+}
+
+.secondText{
+  background-color:hsl(179, 62%, 43%);
+  width: 50%;
+}
+
+.thirdText{
+  background-color:hsl(179, 56%, 50%);
+  width: 50%;
+}
+
+.twoComponents{
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+}
+
+.btnSignUp{
+  background-color: hsl(71, 73%, 54%);
+  border-radius: 5px;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.project{
+  font-size: 16px;
+  font-family: 'Karla', sans-serif;
+}
+
+.join{
+  color: hsl(179, 62%, 43%);
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.day30{
+  font-weight: bold;
+  color:hsl(71, 73%, 54%);
+  font-size: 18px;
+}
+
+.gainAndPerfect{
+  color: hsl(197, 4%, 65%);
+  font-weight: bold;
+}
+
+.price{
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.whyUs{
+  font-size: 20px;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.content{
+  color: hsl(204, 43%, 93%);
+  font-weight: bold;
+}
