--- a/src/App.css
+++ b/src/App.css
@@ -47,11 +47,14 @@
   flex-direction: column;
   text-align: left;
   margin: 63px;
+  text-align: left;
 }
 
 .secondText{
   background-color:hsl(179, 62%, 43%);
   width: 50%;
+  text-align:center;
+  padding: 35px;
 }
 
 .thirdText{
@@ -63,6 +66,7 @@
   display: flex;
   flex-direction: row;
   text-align: center;
+  padding-top: 50px;
 }
 
 .btnSignUp{
@@ -70,6 +74,8 @@
   border-radius: 5px;
   color: #ffffff;
   font-weight: bold;
+  width: 240px;
+  height: 40px;
 }
 
 .project{
@@ -90,13 +96,27 @@
 }
 
 .gainAndPerfect{
-  color: hsl(197, 4%, 65%);
+  color: hsl(197, 4%, 36%);
   font-weight: bold;
 }
 
 .price{
   font-weight: bold;
   color: #ffffff;
+}
+
+.price1{
+  font-weight: bold;
+  color: #ffffff;
+  font-size: 20px;
+}
+
+.value{
+  font-size: 26px;
+}
+
+.perMonth{
+  color: hsl(197, 4%, 36%);
 }
 
 .whyUs{
@@ -106,6 +126,6 @@
 }
 
 .content{
-  color: hsl(204, 43%, 93%);
-  font-weight: bold;
+  color: hsl(197, 4%, 36%);
+  font-weight: bold;  
 }
